--- a/任务二/2.html
+++ b/任务二/2.html
@@ -155,7 +155,7 @@
 	<header>
 	<nav>
 		<ul>
-		<li class="logo"><img src="img\1.jpg.png" alt="logo" /></li>
+		<li class="logo"><img src="1.jpg.jpeg" alt="logo" /></li>
 		<li class="right">
 		<ul>
 	    <li><a href="">导航链接一</a></li>
