冰蓝第二个任务

--- a/第二个任务/index.html
+++ b/第二个任务/index.html
@@ -3,154 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 	<title>第二个任务</title>
-	<style type="text/css">
-		body {
-			margin: 0;
-			padding: 0;
-			background-color:navajowhite;
-			font-family: "Microsoft Yahei";
-		}
-		header nav {
-			background-color: black;
-			height: 60px;
-		}
-		header nav ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			height: 60px;
-		}
-		.logo {
-			width: 200px;
-			float: left;
-			margin-left: 20px;
-		}
-		.logo img {
-			width: 100%;
-			height: 55px;
-		}
-		.right {
-			float: right;
-		}
-		.right li {
-			float: left;
-		}
-		li a {
-			display: block;
-			color: darkmagenta;
-			font-size: 14px;
-			text-align: center;
-			line-height: 10px;
-			padding: 30px 16px;
-			text-decoration: none;
-		}
-		.container {
-			margin: 2rem;
-			padding: 2rem;
-			background-color: lightpink;
-			border: #9e9e9e 1px solid;
-			box-shadow: #FFDEAD 1px 1px 1px;
-		}
-		.author {
-			font-size: 14px;
-			font-family: "Microsoft Yahei";
-		}
-		.content {
-			font-size: 16px;
-			letter-spacing: 2px;
-			line-height: 22px;
-			text-indent: 2em;
-		}
-		.uList {
-			list-style-type: none;
-			font-size: 16px;
-			letter-spacing: 2px;
-			line-height: 22px;
-		}
-		.picBox {
-			margin: 10px 50px;		
-			width: 300px;
-			border: #9e9e9e 0.5px solid;
-			font-size: 16px;
-			font-family: "Microsoft Yahei";
-			letter-spacing: 2px;
-			text-align: center;
-		}
-		.picBox img {
-			width: 280px;
-			padding: 6px;
-		}
-		.table1 {
-			border: solid #9e9e9e;
-			border-width: 1px 0px 0px 1px;
-			width: 100%; 
-			border-collapse: collapse;
-		}
-		.table1 th {
-			border: solid #9e9e9e;
-			border-width: 0px 1px 1px 0px;
-			height: 30px;
-			background-color: plum;
-			color: bisque;
-			text-align: left;
-			padding-left: 10px;
-		}
-		.table1 td {
-			border: solid #9e9e9e;
-			border-width: 0px 1px 1px 0px;
-			height: 30px;
-			padding-left: 10px;
-		}
-		.total {
-			background-color: #9e9e9e;
-			color: blanchedalmond;
-			font-weight: bold;
-		}
-		.formLine {
-			margin: 10px auto;
-			padding: 0px;
-			width: 100%;
-		}
-		.formLabel {
-			padding: 0px;
-			margin: 0px;
-			display: inline-block;
-			width: 30%;
-			text-align: right;
-		}
-		.formLine select {
-			border-radius: 5px;
-		}
-		.formLine textarea {
-			width: 60%;
-			height: 50px;
-		}
-		.prompt {
-			font-weight: lighter;
-			font-size: 12px;
-			margin-top: -5px;
-		}
-		
-		#mysubmit {
-			width: 100%;
-			text-align: center;
-			background-color: blue;
-			color: white;
-			height: 40px;
-			font-size: 20px;
-			font-weight: bold;
-			border-radius: 10px;
-			cursor: pointer;
-		}
-		footer {
-			background-color: black;
-			color: white;
-			height: 50px;
-			text-align: center;
-			padding-top: 20px;
-		}
-	</style>
-</head>
+	<link type="text/css" rel="stylesheet" href="css/1.css">
+	</head>
 <body>
 	<header>
 	<nav>
